--- a/css/style.css
+++ b/css/style.css
@@ -373,7 +373,7 @@ html {
 	text-align: center;
 }
 .services .services-info .service:nth-child(2) .service-card .service-front {
-	background-image: url(./images/img-2.jpg);
+	background-image: url(../image/Jokast\ Kassa.png);
 	background-size: cover;
 	position: relative;
 	color: white;
